packages/taquito-michel-codec/test/contracts_012/ill_typed/multiple_storage_field.tz
parameter nat;
storage unit;
storage unit;
code { CAR;
       DUP; NEG; ABS; COMPARE; ASSERT_EQ;
       UNIT; NIL operation; PAIR }